Amélioration de la landing page : amélioration UX/UI design + Correction des bugs liés à la navigation du formulaire dynamique + rajout d'effets d'animation au click des éléments dans le formulaire. Les éléments sélectionnés sont bien visible

--- a/public/index.html
+++ b/public/index.html
@@ -458,6 +458,7 @@
                                 <select id="autre-chauffage" name="autre_chauffage" autocomplete="off">
                                     <option value="">Sélectionnez votre type de chauffage</option>
                                     <option value="pompe-chaleur-existante">Pompe à chaleur existante</option>
+                                    <option value="chauffage-collectif">Chauffage collectif</option>
                                     <option value="chauffage-solaire">Chauffage solaire</option>
                                     <option value="chauffage-au-sol">Chauffage au sol électrique</option>
                                     <option value="radiateurs-eau">Radiateurs à eau chaude</option>
@@ -493,11 +494,13 @@
                                         <input type="radio" name="civilite" value="mr" required>
                                         
                                         <span style="font-size: 0.9rem;">Monsieur</span>
+                                        <i class="bi bi-gender-male"></i>
                                     </label>
                                     <label class="option" style="padding: 0.75rem;">
                                         <input type="radio" name="civilite" value="mme" required>
                                         
                                         <span style="font-size: 0.9rem;">Madame</span>
+                                        <i><i class="bi bi-gender-female"></i></i>
                                     </label>
                                 </div>
                             </div>
@@ -840,8 +843,7 @@
             <p>&copy; 2026-2027 Haut Sommet Marseille - Installation pompe à chaleur - Tous droits réservés</p>
             <div class="footer-links">
                 <a href="#">Mentions légales</a>
-                <a href="mailto:contact@hautsommet-marseille.fr" itemprop="email">contact@hautsommet-marseille.fr</a>
-                <a href="tel:0800003626" itemprop="telephone">0 800 00 36 26</a>
+                <a href="/cdn-cgi/l/email-protection#0d6e6263796c6e794d656c78797e626060687920606c7f7e6864616168236b7f" itemprop="email"><span class="__cf_email__" data-cfemail="2f4c40415b4e4c5b6f474e5a5b5c4042424a5b02424e5d5c4a4643434a01495d">[email&#160;protected]</a>
             </div>
         </div>
     </footer>
