rajout du chemin vers l'image qui sert de logo au site + Je rajoute des commentaires explicite au niveau de l'url canonique

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <meta name="googlebot" content="index, follow">
     
     <!-- SEO - Canonical URL -->
+    <!-- Pour éviter d'avoir du contenu en double qui soit proposé à l'internaute,
+    ici je spécifie une seule url canonique qui va être présenté aux utilisateur-->
     <link rel="canonical" href="https://www.hautsommet-marseille.fr/">
     
     <!-- SEO - Open Graph / Facebook -->
@@ -222,7 +224,7 @@
     <header class="header" role="banner">
         <div class="logo">
             <a href="#accueil" aria-label="Retour à l'accueil Haut Sommet Marseille">
-                <img src="assets/img/Haut-sommet-Marseille.png" alt="Logo Haut Sommet Marseille - Expert pompe à chaleur" width="100" height="90">
+                <img src="assets/img/Mon-guide-energie.png" alt="Logo Mon guide énergie - Expert pompe à chaleur" width="100" height="90">
             </a>
         </div>
 
@@ -231,7 +233,6 @@
             <img src="assets/img/cee-logo.png" alt="Logo CEE - Certificats d'Économies d'Énergie" width="100" height="67">
             <img src="assets/img/qualibat-logo.png" alt="Logo Qualibat RGE - Certification qualité installation pompe à chaleur" width="100" height="67">
         </div>
-
         <button class="burger-menu" aria-label="Menu de navigation" aria-expanded="false">
             <span class="burger-line"></span>
             <span class="burger-line"></span>
@@ -249,7 +250,7 @@
     <!-- Le numéro de téléphone fixe en bas à droite -->
     <a href="tel:0800003626" class="phone-fixed" aria-label="Appelez-nous gratuitement au 0 800 00 36 26" itemscope itemtype="https://schema.org/ContactPoint">
         <i class="bi bi-telephone-fill" aria-hidden="true"></i>
-        <span class="phone-text" itemprop="telephone">0 800 00 36 26</span>
+        <span class="phone-text" itemprop="telephone">0 800 00 36 26<br>Service & appel gratuit</span>
     </a>
 
     <main role="main">
@@ -483,7 +484,7 @@
                             <p class="form-question">
                                 4. Dernière étape !<br>
                                 <span style="font-size: 0.95em; font-weight: normal;">
-                                    Renseignez vos coordonnées pour recevoir votre simulation personnalisée par un expert.
+                               Nous avons besoin de vos coordonnées pour vous transmettre le montant de vos aides par SMS*.
                                 </span>
                             </p>
 
@@ -642,7 +643,7 @@
 
                             <button type="submit" class="btn-submit">
                                 <i class="bi bi-check-circle" aria-hidden="true"></i>
-                                Envoyer ma simulation gratuite
+                                Envoyer
                             </button>
 
                             <p class="form-disclaimer">
@@ -661,14 +662,14 @@
                                 <div class="confirmation-icon">
                                     <i class="bi bi-check-circle-fill" aria-hidden="true"></i>
                                 </div>
-                                <h3>Merci pour votre demande !</h3>
+                                <h3>Vous êtes éligible aux aides de l'état !</h3>
                                 <p class="confirmation-text">
                                     Votre demande a bien été enregistrée. Un de nos conseillers experts va vous recontacter 
                                     très prochainement pour vous communiquer le montant exact de vos aides MaPrimeRénov' et CEE.
                                 </p>
                                 <p class="confirmation-subtext">
                                     <i class="bi bi-telephone-fill" aria-hidden="true"></i>
-                                    Vous serez contacté(e) dans les 24 heures ouvrées
+                                    Vous serez contacté(e) dans les prochaines 48 heures.
                                 </p>
                             </div>
                         </div>
