--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,14 @@
     <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
     <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
     
+    <!-- CSS principal -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <!-- CSS tablette  -->
+    <link rel="stylesheet" href="assets/css/tablet.css" media="(min-width: 768px) and (max-width: 1023px)">
+
+    <!-- CSS mobile  -->
+    <link rel="stylesheet" href="assets/css/mobile.css" media="(max-width: 767px)">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
