je remplace l'ancienne clé publique par la nouvelle à la ligne 61

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script>
         (function(){
-            emailjs.init('jKNqo-W9zXWuv8Rs5');
+            emailjs.init('NMJm1o0Uk4AvGz4hb');
         })();
     </script>
     <script defer src="assets/js/main.js"></script>
@@ -711,7 +711,7 @@
                             <i class="bi bi-headset" aria-hidden="true"></i>
                         </div>
                         <h3>Un expert vous contacte</h3>
-                        <p>Un conseiller expert RGE vous rappelle sous 24h pour finaliser votre projet et planifier l'installation</p>
+                        <p>Un conseiller expert RGE vous rappelle sous 48h pour finaliser votre projet et planifier l'installation</p>
                     </article>
                 </div>
             </div>
