Je créer un fichier html pour les mentions légales en le complétant de sorte à ce que cela corresponde aux exigences attendus par la RGPD + rajout d'un lien pointant vers la page concerné depuis le footer de ma page index.html + j'apporte du style à ma page mentions légales sur ma feuille de style CSS

--- a/public/index.html
+++ b/public/index.html
@@ -851,7 +851,7 @@
         <div class="container">
             <p>&copy; 2026-2027 Haut Sommet Marseille - Installation pompe à chaleur - Tous droits réservés</p>
             <div class="footer-links">
-                <a href="#">Mentions légales</a>
+                <a href="mentions_legales.html">Mentions légales</a>
                 <a href="/cdn-cgi/l/email-protection#0d6e6263796c6e794d656c78797e626060687920606c7f7e6864616168236b7f" itemprop="email"><span class="__cf_email__" data-cfemail="2f4c40415b4e4c5b6f474e5a5b5c4042424a5b02424e5d5c4a4643434a01495d">[email&#160;protected]</a>
             </div>
         </div>
