Je corrige une erreur de syntaxe juste après le bouton de soumission de formulaire puis je modifie les informations de la partie Comment ça marche

--- a/public/index.html
+++ b/public/index.html
@@ -682,6 +682,7 @@
                                 <i class="bi bi-check-circle" aria-hidden="true"></i>
                                 Envoyer
                             </button>
+                        </div>
 
                         <!-- Étape 5 : Confirmation -->
                         <div class="form-step" data-step="5">
@@ -716,7 +717,7 @@
                         <div class="step-icon">
                             <i class="bi bi-clipboard-check" aria-hidden="true"></i>
                         </div>
-                        <h3>Remplissez le formulaire gratuit</h3>
+                        <h3>Remplissez le formulaire</h3>
                         <p>Quelques informations sur votre logement pour évaluer votre éligibilité aux aides MaPrimeRénov' et CEE</p>
                     </article>
 
@@ -725,8 +726,8 @@
                         <div class="step-icon">
                             <i class="bi bi-calculator" aria-hidden="true"></i>
                         </div>
-                        <h3>Estimez vos aides instantanément</h3>
-                        <p>Découvrez en quelques secondes le montant exact des aides de l'État dont vous bénéficiez</p>
+                        <h3>Vérifiez si vous êtes éligible</h3>
+                        <p>Découvrez en quelques secondes les aides de l'État auxquelles vous avez droit</p>
                     </article>
 
                     <article class="step-card">
@@ -735,7 +736,7 @@
                             <i class="bi bi-headset" aria-hidden="true"></i>
                         </div>
                         <h3>Un expert vous contacte</h3>
-                        <p>Un conseiller expert RGE vous rappelle sous 48h pour finaliser votre projet et planifier l'installation</p>
+                        <p>Un expert Haut Sommet vous rappelle sous 48h pour finaliser votre projet et planifier l'installation</p>
                     </article>
                 </div>
             </div>
