Je remplace l'ancien nom de domaine qui avait été inscrit par celui qui a été choisit par le client

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <meta property="og:url" content="https://www.mesguidesenergie.fr/">
     <meta property="og:title" content="Pompe à Chaleur Marseille : Jusqu'à 9500€ d'Aides | Mes guides énergie">
     <meta property="og:description" content="Installation de pompes à chaleur à Marseille. Jusqu'à 9500€ d'aides de l'État. Économisez 70% sur vos factures. Experts RGE certifiés. Devis gratuit.">
-    <meta property="og:image" content="https://www.mesguidesenergie.fr/assets/img/og-image.jpg">
+    <meta property="og:image" content="https://www.mesguidesenergie.fr/assets/img/mes-guides-energie.webp">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:locale" content="fr_FR">
@@ -31,7 +31,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Pompe à Chaleur Marseille : Jusqu'à 9500€ d'Aides | Mes guides énergie">
     <meta name="twitter:description" content="Installation de pompes à chaleur à Marseille. Jusqu'à 9500€ d'aides de l'État. Économisez 70% sur vos factures. Experts RGE certifiés.">
-    <meta name="twitter:image" content="https://www.mesguidesenergie.fr/assets/img/og-image.jpg">
+    <meta name="twitter:image" content="https://www.mesguidesenergie.fr/assets/img/mes-guides-energie.webp">
     
     <!-- SEO - Geo Tags pour le référencement local -->
     <meta name="geo.region" content="FR-13">
@@ -70,7 +70,7 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Mes guides énergie",
-        "image": "https://www.mesguidesenergie.fr/assets/img/Haut-sommet-Marseille.png",
+        "image": "https://www.mesguidesenergie.fr/assets/img/mes-guides-energie.webp",
         "@id": "https://www.mesguidesenergie.fr/",
         "url": "https://www.mesguidesenergie.fr/",
         "telephone": "+33800003626",
@@ -232,14 +232,14 @@
     <header class="header" role="banner">
         <div class="logo">
             <a href="#accueil" aria-label="Retour à l'accueil Mes guides énergie">
-                <img src="assets/img/Mon-guide-energie.png" alt="Logo Mes guides énergie - Expert pompe à chaleur" width="100" height="90">
+                <img src="assets/img/mes-guides-energie.webp" alt="Logo Mes guides énergie - Expert pompe à chaleur" width="150" height="90">
             </a>
         </div>
 
         <div class="help-logo" aria-label="Certifications et partenaires">
-            <img src="assets/img/ma-prime-renov.svg" alt="Logo MaPrimeRénov' - Aide de l'État pour la rénovation énergétique" width="100" height="67">
-            <img src="assets/img/cee-logo.png" alt="Logo CEE - Certificats d'Économies d'Énergie" width="100" height="67">
-            <img src="assets/img/qualibat-logo.png" alt="Logo Qualibat RGE - Certification qualité installation pompe à chaleur" width="100" height="67">
+            <img src="assets/img/ma-prime-renov.webp" alt="Logo MaPrimeRénov' - Aide de l'État pour la rénovation énergétique" width="100" height="67">
+            <img src="assets/img/cee-logo.webp" alt="Logo CEE - Certificats d'Économies d'Énergie" width="100" height="67">
+            <img src="assets/img/qualibat-logo.webp" alt="Logo Qualibat RGE - Certification qualité installation pompe à chaleur" width="100" height="67">
         </div>
         <button class="burger-menu" aria-label="Menu de navigation" aria-expanded="false">
             <span class="burger-line"></span>
