J'indique une seule et même email de contact à contacter

--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
         "@id": "https://www.mesguidesenergie.fr/",
         "url": "https://www.mesguidesenergie.fr/",
         "telephone": "+33800003626",
-        "email": "secretariat.hautsommet@gmail.com",
+        "email": "contact.hautsommet@gmail.com",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "24-26 Boulevard Gay Lussac",
@@ -876,7 +876,7 @@
             <p>&copy; 2026-2027 Mes guides énergie - Installation pompe à chaleur - Tous droits réservés</p>
             <div class="footer-links">
                 <a href="mentions_legales.html">Mentions légales</a>
-                <a href="mailto:contact@hautsommet.com">contact@hautsommet.com</a>
+                <a href="mailto:contact.hautsommet@gmail.com">contact.hautsommet@gmail.com</a>
             </div>
         </div>
     </footer>
