Rajout d'un nouveau logo pour le site + implémentation html et ajustement de sa taille en version desktop en CSS

--- a/public/index.html
+++ b/public/index.html
@@ -232,7 +232,7 @@
     <header class="header" role="banner">
         <div class="logo">
             <a href="#accueil" aria-label="Retour à l'accueil Mes guides énergie">
-                <img src="assets/img/mes-guides-energie.webp" alt="Logo Mes guides énergie - Expert pompe à chaleur" width="150" height="90">
+                <img src="assets/img/logo-mes-guides-energies.png" alt="Logo Mes guides énergie - Expert pompe à chaleur" width="500" height="500">
             </a>
         </div>
 
