Je retire aggregateRating dans mon fichier index.html, il n'y a pas d'avis pris en compte pour l'instant sur ce site + je modifie la balise meta pour que la page des mentions légales ne soit pas trouvé par le robot d'indexation

--- a/public/mentions_legales.html
+++ b/public/mentions_legales.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Pas de référencement pour les mentions légales -->
-    <meta name="robots" content="noindex, nofollow">
+    <meta name="robots" content="noindex, follow">
     
     <title>Mentions Légales - Mes guides énergie</title>
     <meta name="description" content="Mentions légales du site Mes guides énergie, spécialiste de l'installation de pompes à chaleur à Marseille et dans les Bouches-du-Rhône.">
