modification du logo pour la page des mentions légales

--- a/public/mentions_legales.html
+++ b/public/mentions_legales.html
@@ -32,7 +32,7 @@
     <header class="header" role="banner">
         <div class="logo">
             <a href="index.html" aria-label="Retour à l'accueil Mes guides énergie">
-                <img src="assets/img/mes-guides-energie.webp" alt="Logo Mes guides énergie - Expert pompe à chaleur" width="100" height="90">
+                <img src="assets/img/logo-mes-guides-energies.png" alt="Logo Mes guides énergie - Expert pompe à chaleur" width="100" height="90">
             </a>
         </div>
 
