Modification d'une phrase à la ligne 265

--- a/public/index.html
+++ b/public/index.html
@@ -262,7 +262,7 @@
                 
                 <div class="urgency-banner" role="alert">
                     <i class="bi bi-clock-history" aria-hidden="true"></i>
-                    <span>Places limitées pour janvier 2026 • Profitez des aides avant leur révision</span>
+                    <span>Places limitées pour février 2026 • Profitez des aides avant leur révision</span>
                 </div>
 
                 <div class="help-cards">
