Je modifie les informations présentes dans ma balise h1 dans mon index.html puis j'applique des couleurs dans ma feuille de style CSS

--- a/public/index.html
+++ b/public/index.html
@@ -258,14 +258,12 @@
         <!-- Section 1 : Accueil -->
         <section id="accueil" class="section-accueil" itemscope itemtype="https://schema.org/Service">
             <div class="container">
-                <h1 itemprop="name"><span class="important"><strong>Simulez vos aides</strong></span>
-                    <br><span class="important"><strong>Tester votre éligibité</strong></span> 
-                    aux aides d'État et de départements pour l'installation d'une pompe à chaleur
-                    <br> Réalisez jusqu'à 70% d'Économie sur votre Facture de Chauffage</h1>
+                <h1 itemprop="name"><span class="important-text1">Tester votre éligibité</span><br> 
+                    aux aides de l'État et de départements pour l'installation d'une pompe à chaleur</h1>
                 
                 <div class="urgency-banner" role="alert">
                     <i class="bi bi-clock-history" aria-hidden="true"></i>
-                    <span>Places limitées pour février 2026 • Profitez des aides avant leur révision</span>
+                    <span class="important-text2">Simulez vos aides</span>
                 </div>
 
                 <div class="help-cards">
