Modification de quelques commentaires dans mon fichier index.html ainsi que des données lié à l'adresse de la société ainsi que sa position géographique + Modification du manuel d'utilisation

--- a/public/index.html
+++ b/public/index.html
@@ -75,16 +75,16 @@
         "email": "contact.hautsommet@gmail.com",
         "address": {
             "@type": "PostalAddress",
-            "streetAddress": "24-26 Boulevard Gay Lussac",
-            "addressLocality": "Marseille",
+            "streetAddress": "244 Boulevard Barthélémy Abbadie",
+            "addressLocality": "Saint-Victoret",
             "addressRegion": "Provence-Alpes-Côte d'Azur",
-            "postalCode": "13014",
+            "postalCode": "13730",
             "addressCountry": "FR"
         },
         "geo": {
             "@type": "GeoCoordinates",
-            "latitude": 43.296482,
-            "longitude": 5.369780
+            "latitude": 43.419819,
+            "longitude": 5.23676
         },
         "openingHoursSpecification": {
             "@type": "OpeningHoursSpecification",
@@ -274,7 +274,7 @@
     </a>
 
     <main role="main">
-        <!-- Section 1 : Accueil - Hero OPTIMISÉ CONVERSION -->
+        <!-- Section 1 : Accueil -->
         <section id="accueil" class="section-accueil" itemscope itemtype="https://schema.org/Service">
             <div class="container">
                 <!-- Bandeau d'urgence animé -->
@@ -294,7 +294,7 @@
                     <span class="hero-subtext">Marseille • Nice • Toulon • Avignon • Aix-en-Provence • et toute la région</span>
                 </p>
 
-                <!-- Mini-formulaire Hero pour engagement immédiat -->
+                <!-- Mini-formulaire -->
                 <div class="hero-cta-box">
                     <div class="hero-cta-header">
                         <i class="bi bi-lightning-charge-fill"></i>
@@ -314,7 +314,7 @@
                     </p>
                 </div>
 
-                <!-- Statistiques de confiance -->
+                <!-- Statistiques -->
                 <div class="hero-stats">
                     <div class="hero-stat">
                         <span class="hero-stat-number">9 500€</span>
@@ -386,7 +386,7 @@
         <!-- Section 2 : Simulation -->
         <section id="simulation" class="section-simulation">
             <div class="container">
-                <!-- Formulaire en premier -->
+                <!-- Formulaire -->
                 <div id="calculator" class="calculator-box">
                     <div class="calculator-header">
                         <span class="calculator-badge">100% GRATUIT</span>
@@ -417,7 +417,7 @@
                                 </label>
                             </div>
 
-                            <!-- Les champs supplémentaires pour appartement -->
+                            <!-- Les champs supplémentaires pour l'appartement -->
                             <div class="form-field-group" id="appartement-details" style="display: none;">
                                 <p class="form-sub-question">Informations sur votre appartement :</p>
                                 
@@ -730,7 +730,7 @@
                                 </label>
                             </div>
 
-                            <!-- Case SMS -->
+                            <!-- Case pour choisir si oui ou non on veut recevoir un SMS -->
                             <div class="form-field consent-field" style="margin-bottom: 1.5rem;">
                                 <label class="consent-checkbox" style="display: flex; align-items: flex-start; cursor: pointer;">
                                     <input type="checkbox" id="consent-sms" name="consent_sms" 
@@ -772,7 +772,7 @@
                     </form>
                 </div>
 
-                <!-- Comment ça marche - Grid Layout -->
+                <!-- Comment ça marche  -->
                 <div class="how-it-works-grid">
                     <h2 class="grid-title">Comment obtenir votre pompe à chaleur avec les aides de l'État ?</h2>
                     
