Modification du span à la ligne 283

--- a/public/index.html
+++ b/public/index.html
@@ -280,7 +280,7 @@
                 <!-- Bandeau d'urgence animé -->
                 <div class="urgency-banner-top" role="alert">
                     <i class="bi bi-exclamation-triangle-fill" aria-hidden="true"></i>
-                    <span><strong>AIDES 2025 :</strong> Budget limité ! Testez votre éligibilité avant épuisement des fonds</span>
+                    <span><strong>AIDES 2026 :</strong> Budget limité ! Testez votre éligibilité avant l'épuisement des fonds</span>
                     <i class="bi bi-exclamation-triangle-fill" aria-hidden="true"></i>
                 </div>
 
