--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,9 @@
 
     <!-- CSS mobile  -->
     <link rel="stylesheet" href="assets/css/mobile.css" media="(max-width: 767px)">
+
+    <!-- Favicon -->
+    <link rel="icon" href="./assets/img/favicon.ico">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     
@@ -244,7 +247,7 @@
     <header class="header" role="banner">
         <div class="logo">
             <a href="#accueil" aria-label="Retour à l'accueil Mes guides énergie">
-                <img src="assets/img/logo-mes-guides-energies.png" alt="Logo Mes guides énergie - Expert pompe à chaleur" width="500" height="500">
+                <img src="assets/img/logo-mes-guides-energie-v2.png" alt="Logo Mes guides énergie - Expert pompe à chaleur" width="500" height="500">
             </a>
         </div>
 
