rajout de liens externes au niveau de la partie partenaire au sein du header

--- a/public/mentions_legales.html
+++ b/public/mentions_legales.html
@@ -38,9 +38,17 @@
 
         <div class="help-logo" aria-label="Certifications et partenaires">
 
-            <a href="https://www.maprimerenov.gouv.fr/prweb/PRAuth/app/AIDES/BPNVwCpLW8TKW49zoQZpAw*/!STANDARD" target="_blank"><img src="assets/img/ma-prime-renov.webp" alt="Logo MaPrimeRénov' - Aide de l'État pour la rénovation énergétique" width="100" height="67"></a>
-            <a href="https://mission-transition-ecologique.beta.gouv.fr/aides-entreprise/certificats-economie-energie" target="_blank"><img src="assets/img/cee-logo.webp" alt="Logo CEE - Certificats d'Économies d'Énergie" width="100" height="67"></a>
-            <a href="https://www.qualibat.com/" target="_blank"><img src="assets/img/qualibat-logo.webp" alt="Logo Qualibat RGE - Certification qualité installation pompe à chaleur" width="100" height="67"></a>
+            <a href="https://www.maprimerenov.gouv.fr/prweb/PRAuth/app/AIDES/BPNVwCpLW8TKW49zoQZpAw*/!STANDARD" target="_blank">
+                <img src="assets/img/ma-prime-renov.webp" alt="Logo MaPrimeRénov' - Aide de l'État pour la rénovation énergétique" width="100" height="67">
+            </a>
+
+            <a href="https://mission-transition-ecologique.beta.gouv.fr/aides-entreprise/certificats-economie-energie" target="_blank">
+                <img src="assets/img/cee-logo.webp" alt="Logo CEE - Certificats d'Économies d'Énergie" width="100" height="67">
+            </a>
+
+            <a href="https://www.qualibat.com/" target="_blank">
+                <img src="assets/img/qualibat-logo.webp" alt="Logo Qualibat RGE - Certification qualité installation pompe à chaleur" width="100" height="67">
+            </a>
         </div>
         <button class="burger-menu" aria-label="Menu de navigation" aria-expanded="false">
             <span class="burger-line"></span>
